--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 *.class
+.idea/
+build/
+*.iml
+.gradle/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.ear
 
