--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,12 @@ repositories {
     jcenter()
 }
 
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
